tests/neg/java-ann-extends/Test.scala
def test(x: Ann) =
  val y: scala.annotation.Annotation = x // error
